Fix input placeholder overflow in general settings

--- a/app/renderer/css/preference.css
+++ b/app/renderer/css/preference.css
@@ -751,3 +751,7 @@ i.open-network-button {
     color: rgba(255, 255, 255, 1.000);
     border-color: rgba(0, 0, 0, 0);
 }
+
+.tagify__input {
+    min-width: 130px !important;
+}
